remove theme constant overrides. b=372996 r=smorgan sr=vlad